--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Run Pytest
+name: Run Tests
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  test:
+  unitTests:
     runs-on: ubuntu-latest
 
     steps:
@@ -27,3 +27,28 @@ jobs:
     - name: Run tests with pytest
       run: |
         pytest --maxfail=1 --disable-warnings -q
+  newman:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install Newman
+        run: npm install -g newman newman newman-reporter-htmlextra
+
+
+      - name: Run Newman collection
+        run: |
+          newman run epostman_collection.json \
+            --reporters cli,htmlextra \
+            --reporter-htmlextra-export newman-report.html
+      - name: Upload Newman Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: newman-report
+          path: newman-report.html
