--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  test:
+  unitTests:
     runs-on: ubuntu-latest
 
     steps:
@@ -27,3 +27,36 @@ jobs:
     - name: Run tests with pytest
       run: |
         pytest --maxfail=1 --disable-warnings -q
+  newmanTests:
+    runs-on: ubuntu-latest
+    needs: unitTests
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+    - name: Start API
+      run: |
+        nohup fastapi run main.py --port 8000 &
+        sleep 5
+    - name: Set up Node
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+    - name: Install Newman
+      run: npm install -g newman newman-reporter-htmlextra
+    - name: Run newman
+      run: |
+        newman run TarjetaOH.postman_collection.json --reporters htmlextra --reporter-htmlextra-export newman-report.html
+    - name: Upload report
+      uses: actions/upload-artifact@v4
+      with:
+        name: newman-report
+        path: newman-report.html
+
